--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -302,7 +302,7 @@ menupage text
     margin-bottom: 0;
     padding-top: 1rem;
     padding-bottom: 0rem;
-    background-color: $success-color;
+    background-color: $panel-2n-bg;
     @media #{$small-only} {
         margin-bottom: 0;
         padding-top: 0.5rem;
