--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -181,6 +181,25 @@ homepage
         }
     }
 }
+.asporto-hero {
+    background: url('http://www.beerstrot.it/asset/img/large/asporto.jpg') no-repeat center center;
+    background-size: cover;
+    height: 90%;
+    overflow: hidden;
+    h1 {
+        font-size: 4rem;
+        color: white;
+        font-weight: 500;
+        line-height: 4.8rem;
+        text-align: center;
+        margin-top: 4rem;
+        @media #{$small-only} {
+            font-size: 2rem;
+            line-height: 3rem;
+            margin-top: 2rem;
+        }
+    }
+}
 
 /*===================================================================
 Chi Siamo
