--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -700,7 +700,7 @@ calendario - commenti
 }
 
 #calendar .event-desc :hover {
-    background: scale-color(#009aaf, $lightness: -5%);
+    background: scale-color(#e4f2f2, $lightness: -15%);
 }
 
 #calendar .event-desc {
