--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -698,6 +698,20 @@ calendario - commenti
     color: #009aaf;
     text-decoration: none;
 }
+#calendar .event-close {
+    clear: both;
+    display: block;
+    font-size: 0.8rem;
+    border-radius: 4px;
+    padding: 5px;
+    margin-top: 60px;
+    margin-bottom: 0px;
+    line-height: 1,6rem;
+    background: #FC4C39;
+    border: none;
+    color: #009aaf;
+    text-decoration: none;
+}
 
 #calendar .event-desc :hover {
     background: scale-color(#e4f2f2, $lightness: -15%);
