--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -702,12 +702,13 @@ calendario - commenti
     clear: both;
     display: block;
     font-size: 0.8rem;
+    color:$gainsboro;
     border-radius: 4px;
     padding: 5px;
     margin-top: 60px;
     margin-bottom: 0px;
     line-height: 1,6rem;
-    background: #FC4C39;
+    background: #FD876E;
     border: none;
     color: #009aaf;
     text-decoration: none;
