--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -702,7 +702,7 @@ calendario - commenti
     clear: both;
     display: block;
     font-size: 0.8rem;
-    color:$gainsboro;
+    color:$white;
     border-radius: 4px;
     padding: 5px;
     margin-top: 60px;
