--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -723,6 +723,11 @@ calendario - commenti
     text-decoration: none;  
 }
 
+#calendar .event-close .event-desc {
+    color: $white;
+    margin: 3px 0 7px 0;
+    text-decoration: none;  
+}
 
 /* ============================
                 Mobile Responsiveness
