--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -707,9 +707,9 @@ calendario - commenti
     margin-top: 60px;
     margin-bottom: 0px;
     line-height: 1,6rem;
-    background: #FD876E;
+    background: #DC143C;
     border: none;
-    color: #009aaf;
+    color: #DC143C;
     text-decoration: none;
 }
 
