--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -174,7 +174,7 @@ homepage
     }
 }
 .homepage-hero {
-    background: url('http://www.beerstrot.it/asset/img/large/background-home.jpg') no-repeat center center;
+    background: url('http://www.beerstrot.it/asset/img/large/background-home.gif') center center;
     background-size: cover;
     height: 90%;
     overflow: hidden;
