--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -189,6 +189,7 @@ homepage
             font-size: 2rem;
             line-height: 3rem;
             margin-top: 2rem;
+            height: 70%;
         }
     }
 }
