--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -461,7 +461,7 @@ ul .icon-font-style {
   fill: $primary-color;
 }
 
-.fi-telephone {
+.fa fa-phone {
     font-size: 1rem;
         @media #{$small-only} {
         font-size: 1rem;
