--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -201,6 +201,9 @@ homepage
     background-size: cover;
     height: 90%;
     overflow: hidden;
+    @media #{$small-only} {
+            height: 60%;
+        }
     h1 {
         font-size: 4rem;
         color: white;
