--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -195,6 +195,7 @@ homepage
             margin-top: 2rem;
         }
         @media #{$medium-only} {
+            height: 60%;
             font-size: 2rem;
             line-height: 3rem;
             margin-top: 2rem;
@@ -219,6 +220,7 @@ homepage
             margin-top: 2rem;
         }
         @media #{$medium-only} {
+            height: 60%;
             font-size: 2rem;
             line-height: 3rem;
             margin-top: 2rem;
