--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -195,7 +195,6 @@ homepage
             margin-top: 2rem;
         }
         @media #{$medium-only} {
-            height: 60%;
             font-size: 2rem;
             line-height: 3rem;
             margin-top: 2rem;
@@ -207,6 +206,9 @@ homepage
     background-size: cover;
     height: 90%;
     overflow: hidden;
+    @media #{$small-only} {
+            height: 60%;
+        }
     h1 {
         font-size: 4rem;
         color: white;
@@ -220,7 +222,6 @@ homepage
             margin-top: 2rem;
         }
         @media #{$medium-only} {
-            height: 60%;
             font-size: 2rem;
             line-height: 3rem;
             margin-top: 2rem;
