--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -393,7 +393,7 @@ footer header style
     @media #{$small-only} {
         margin-bottom: 0;
         padding-top: 2rem;
-        padding-bottom: 1rem;
+        padding-bottom: 2rem;
     }
 }
 .panel-footer {
@@ -405,6 +405,11 @@ footer header style
         @media #{$small-only} {
         font-size: 0.83rem;
         }
+        @media #{$small-only} {
+        margin-bottom: 0;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
     }
 }
 .panel-hr {
