--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -397,8 +397,9 @@ footer header style
     }
 }
 .panel-footer {
+    margin-bottom: 0;
     padding-top: 2rem;
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
     background-color: $footer-background-color;
     p {
         font-size: 1rem;
