--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -178,6 +178,9 @@ homepage
     background-size: cover;
     height: 90%;
     overflow: hidden;
+    @media #{$small-only} {
+            height: 60%;
+        }
     h1 {
         font-size: 4rem;
         color: white;
@@ -185,13 +188,26 @@ homepage
         line-height: 4.8rem;
         text-align: center;
         margin-top: 4rem;
+        @media #{$small-only} {
+            font-size: 2rem;
+            line-height: 3rem;
+            margin-top: 2rem;
         }
+        @media #{$medium-only} {
+            font-size: 2rem;
+            line-height: 3rem;
+            margin-top: 2rem;
+        }
+    }
 }
 .asporto-hero {
     background: url('http://www.beerstrot.it/asset/img/large/asporto-background.jpg') no-repeat center center;
     background-size: cover;
     height: 90%;
     overflow: hidden;
+    @media #{$small-only} {
+            height: 60%;
+        }
     h1 {
         font-size: 4rem;
         color: white;
@@ -199,6 +215,16 @@ homepage
         line-height: 4.8rem;
         text-align: center;
         margin-top: 4rem;
+        @media #{$small-only} {
+            font-size: 2rem;
+            line-height: 3rem;
+            margin-top: 2rem;
+        }
+        @media #{$medium-only} {
+            font-size: 2rem;
+            line-height: 3rem;
+            margin-top: 2rem;
+        }
     }
 }
 
