update text-highlight margin

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -161,6 +161,7 @@ homepage
 }
 .text-highlight {
     background-color: rgba($black, 0.25);
+    margin-top: 0,5rem;
 }
 .panel-asporto{
     margin-bottom: 0;
