--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -175,7 +175,7 @@ homepage
     }
 }
 .homepage-hero {
-    background: url('http://www.beerstrot.it/asset/img/large/background-home.gif') center center;
+    background: url('https://www.beerstrot.it/asset/img/large/background-home.gif') center center;
     background-size: cover;
     height: 90%;
     overflow: hidden;
@@ -203,7 +203,7 @@ homepage
     }
 }
 .asporto-hero {
-    background: url('http://www.beerstrot.it/asset/img/large/asporto-background.jpg') no-repeat center center;
+    background: url('https://www.beerstrot.it/asset/img/large/asporto-background.jpg') no-repeat center center;
     background-size: cover;
     height: 90%;
     overflow: hidden;
