change homepage image

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -175,7 +175,7 @@ homepage
     }
 }
 .homepage-hero {
-    background: url('https://www.beerstrot.it/asset/img/large/background-home.gif') center center;
+    background: url('https://www.beerstrot.it/asset/img/large/background-home-estiva.jpg') center center;
     background-size: cover;
     height: 90%;
     overflow: hidden;
