--- a/scss/app.scss
+++ b/scss/app.scss
@@ -6,10 +6,10 @@
 //include all components
 //@import "foundation";
 
-//selectively include components 
+//selectively include components
 
 @import "foundation/components/grid";
-// @import "foundation/components/accordion";
+@import "foundation/components/accordion";
 // @import "foundation/components/alert-boxes";
 @import "foundation/components/block-grid";
 //@import "foundation/components/breadcrumbs";
