change price format

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -322,6 +322,11 @@ menupage text
         font-size: 1rem;
         margin-bottom: 0.5rem;
     }
+    .price {
+        font-size: 0.95rem;
+        margin-left: 1.5rem;
+        font-weight: normal;
+   }
 }
 
 .panel-menu-n {
