--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -811,3 +811,10 @@ tabs
     border-color: $white;
 }
 
+/*===================================================================
+privacy
+===================================================================*/
+
+.privacy {
+    font-size: 0,8rem;
+}
