--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -805,3 +805,8 @@ privacy
 .privacy {
     font-size: 0,8rem;
 }
+
+/*===================================================================
+hamburger
+===================================================================*/
+
