--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -34,6 +34,9 @@ margini per allineare le aside e i button
 .extra-space-hero {
     margin-top: 1rem;
 }
+.extra-space-hamburger {
+    margin-top: 1.2rem;
+}
 .extra-space {
     margin-top: 2rem;
 }
