--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -462,6 +462,7 @@ $align-block-grid-to-grid: true;
 // We use this to control the display property.
 // $button-display: inline-block;
 // $button-margin-bottom: rem-calc(20);
+$button-margin-bottom: rem-calc(0);
 
 // We use these to control button text styles.
 // $button-font-family: $body-font-family;
@@ -497,6 +498,7 @@ $button-border-style: none;
 
 // We use this to set default opacity and cursor for disabled buttons.
 // $button-disabled-opacity: 0.7;
+$button-disabled-opacity: 0.2;
 // $button-disabled-cursor: $cursor-default-value;
 
 // 06. Button Groups
