--- a/scss/app.scss
+++ b/scss/app.scss
@@ -13,7 +13,7 @@
 //@import "foundation/components/alert-boxes";
 @import "foundation/components/block-grid";
 //@import "foundation/components/breadcrumbs";
-@import "foundation/components/button-groups";
+//@import "foundation/components/button-groups";
 @import "foundation/components/buttons";
 @import "foundation/components/clearing";
 // @import "foundation/components/dropdown";
