update distance between orari

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -811,5 +811,5 @@ privacy
 }
 
 /*===================================================================
-hamburger
+prenota
 ===================================================================*/
