--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -411,7 +411,7 @@ $accordion-navigation-bg-color: $white;
 // We use this to control the maximum number of block grid elements per row
 // $block-grid-elements: 12;
 // $block-grid-default-spacing: rem-calc(20);
-$block-grid-default-spacing: rem-calc(4b0);
+$block-grid-default-spacing: rem-calc(40);
 // $align-block-grid-to-grid: false;
 $align-block-grid-to-grid: true;
 // Enables media queries for block-grid classes. Set to false if writing semantic HTML.
