change button focused color

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -477,6 +477,7 @@ $button-margin-bottom: rem-calc(-10);
 
 // We use these to control various hover effects.
 // $button-function-factor: -20%;
+$button-function-factor: -40%;
 
 // We use these to control button border and hover styles.
 // $button-border-width: 0px;
