update text and space

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -813,3 +813,10 @@ privacy
 /*===================================================================
 prenota
 ===================================================================*/
+.extra-space-turno {
+    margin-top: 0.25rem;
+    @media #{$small-only} {
+        margin-top: 0.2rem;
+        margin-bottom: 0rem;
+    }
+}
