update placeholder color

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -716,6 +716,7 @@ $button-disabled-opacity: 0.2;
 
 // Select variables
 // $select-bg-color: $ghost;
+$select-bg-color: $white;
 // $select-hover-bg-color: scale-color($select-bg-color, $lightness: -3%);
 
 // 12. Icon Bar
