--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -820,3 +820,17 @@ prenota
         margin-bottom: 0rem;
     }
 }
+
+::-webkit-input-placeholder {
+  color: #b5b3b3; }
+
+:-moz-placeholder {
+  /* Firefox 18- */
+  color: #b5b3b3; }
+
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #b5b3b3; }
+
+:-ms-input-placeholder {
+  color: #b5b3b3; }
