add responsive table

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -834,3 +834,63 @@ prenota
 
 :-ms-input-placeholder {
   color: #b5b3b3; }
+
+#dashboard {
+    @media
+      only screen
+    and (max-width: 760px), (min-device-width: 768px)
+    and (max-device-width: 1024px)  {
+/* Force table to not be like tables anymore */
+    table, thead, tbody, th, td, tr {
+            display: block;
+        }
+/* Hide table headers (but not display: none;, for accessibility) */
+    thead tr {
+            position: absolute;
+            top: -9999px;
+            left: -9999px;
+        }
+
+    tr {
+      margin: 0 0 1rem 0;
+    }
+
+    tr:nth-child(odd) {
+      background: #ccc;
+    }
+
+    td {
+        /* Behave  like a "row" */
+        border: none;
+        border-bottom: 1px solid #eee;
+        position: relative;
+        padding-left: 50%;
+    }
+
+    td:before {
+            /* Now like a table header */
+        position: absolute;
+            /* Top/left values mimic padding */
+        top: 0;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+    }
+
+/*  Label the data
+    You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
+        */
+        td:nth-of-type(1):before { content: "Nome"; }
+        td:nth-of-type(2):before { content: "Telefono"; }
+        td:nth-of-type(3):before { content: "Email"; }
+        td:nth-of-type(4):before { content: "Orario"; }
+        td:nth-of-type(5):before { content: "Numero persone"; }
+        td:nth-of-type(6):before { content: "Tavolo"; }
+        td:nth-of-type(7):before { content: "Seggioloni"; }
+        td:nth-of-type(8):before { content: "Cani"; }
+        td:nth-of-type(9):before { content: "Note"; }
+}
+}
+
+
