--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -902,7 +902,7 @@ prenota
   width: 100vw;
   height: 100vh;
   background-color: rgba(192, 192, 192, 0.9);
-  background-image: url(https://www.beerstrot.it//asset/img/loading1.gif);
+  background-image: url('https://www.beerstrot.it//asset/img/loading1.gif');
   background-repeat: no-repeat;
   background-position: center;
   text-align: center;
