form text size 16
test to stop viewport to resize when form selected

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -665,6 +665,7 @@ $form-label-font-size: rem-calc(16);
 // $input-font-family: inherit;
 // $input-font-color: rgba(0,0,0,0.75);
 // $input-font-size: rem-calc(14);
+$input-font-size: rem-calc(16);
 // $input-bg-color: $white;
 // $input-focus-bg-color: scale-color($white, $lightness: -2%);
 // $input-border-color: scale-color($white, $lightness: -20%);
