test stop zooming on form selection

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -896,7 +896,7 @@ prenota
 //stop zoom viewport on form selection small screen only
 @media #{$small-only} {
         input, select, textarea {
-        font-size: 16px;
+        font-size: 16px !important;
 };
     }
 
