--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -99,6 +99,7 @@ $include-html-global-classes: $include-html-classes;
 $white       : #FFFFFF;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
+$snow        : #f2f2f2;
 // $vapor       : #F6F6F6;
 // $white-smoke : #F5F5F5;
 // $silver      : #EFEFEF;
@@ -1331,6 +1332,7 @@ $sub-nav-active-padding: rem-calc(3 6);
 // These control the background color for the table and even rows
 // $table-bg: $white;
 // $table-even-row-bg: $snow;
+$table-even-row-bg: $snow;
 
 // These control the table cell border style
 // $table-border-style: solid;
