--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -102,6 +102,7 @@ $white       : #FFFFFF;
 $snow        : #f2f2f2;
 // $vapor       : #F6F6F6;
 // $white-smoke : #F5F5F5;
+$white-smoke : #d9d9d9;
 // $silver      : #EFEFEF;
 // $smoke       : #EEEEEE;
 // $gainsboro   : #DDDDDD;
