--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -906,14 +906,14 @@ prenota
 
 #loading {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(192, 192, 192, 0.9);
-  background-image: url('https://www.beerstrot.it/asset/img/loading.gif');
+  background-color: rgba(255, 255, 255, 0.9);
+  background-image: url('https://www.beerstrot.it/asset/img/loading1.gif');
   background-repeat: no-repeat;
   background-position: center;
   text-align: center;
