--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -288,6 +288,7 @@ $code-padding: rem-calc(2) rem-calc(5) rem-calc(2);
 // $anchor-text-decoration-hover: none;
 // $anchor-font-color: $primary-color;
 // $anchor-font-color-hover: scale-color($primary-color, $lightness: -14%);
+$anchor-font-color-hover: scale-color($primary-color, $lightness: -30%);
 
 // We use these to style the <hr> element
 // $hr-border-width: 1px;
@@ -1368,6 +1369,7 @@ $tabs-navigation-padding: rem-calc(6);
 $tabs-navigation-bg-color: $primary-color;
 // $tabs-navigation-active-bg-color: $white;
 // $tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -6%);
+$tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -30%);
 // $tabs-navigation-font-color: $jet;
 $tabs-navigation-font-color: $white;
 // $tabs-navigation-active-font-color: $tabs-navigation-font-color;
