--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -926,3 +926,15 @@ input:not([type])[disabled], input:not([type])[readonly], fieldset[disabled] inp
 }
 
 
+
+// ul.tabs {
+//     text-align: center;
+//     li {
+//         float: none !important;
+//         display: inline-block;
+//         margin-top: 1rem;
+//         padding: 0px;
+//     }
+// }
+
+
