--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -835,63 +835,63 @@ prenota
 :-ms-input-placeholder {
   color: #b5b3b3; }
 
-#dashboard {
-    @media
-      only screen
-    and (max-width: 760px), (min-device-width: 768px)
-    and (max-device-width: 1024px)  {
-/* Force table to not be like tables anymore */
-    table, thead, tbody, th, td, tr {
-            display: block;
-        }
-/* Hide table headers (but not display: none;, for accessibility) */
-    thead tr {
-            position: absolute;
-            top: -9999px;
-            left: -9999px;
-        }
+// #dashboard {
+//     @media
+//       only screen
+//     and (max-width: 760px), (min-device-width: 768px)
+//     and (max-device-width: 1024px)  {
+// /* Force table to not be like tables anymore */
+//     table, thead, tbody, th, td, tr {
+//             display: block;
+//         }
+// /* Hide table headers (but not display: none;, for accessibility) */
+//     thead tr {
+//             position: absolute;
+//             top: -9999px;
+//             left: -9999px;
+//         }
 
-    tr {
-      margin: 0 0 1rem 0;
-    }
+//     tr {
+//       margin: 0 0 1rem 0;
+//     }
 
-    tr:nth-child(odd) {
-      background: #ccc;
-    }
+//     tr:nth-child(odd) {
+//       background: #ccc;
+//     }
 
-    td {
-        /* Behave  like a "row" */
-        border: none;
-        border-bottom: 1px solid #eee;
-        position: relative;
-        padding-left: 50%;
-    }
+//     td {
+//         /* Behave  like a "row" */
+//         border: none;
+//         border-bottom: 1px solid #eee;
+//         position: relative;
+//         padding-left: 50%;
+//     }
 
-    td:before {
-            /* Now like a table header */
-        position: absolute;
-            /* Top/left values mimic padding */
-        top: 0;
-        left: 6px;
-        width: 45%;
-        padding-right: 10px;
-        white-space: nowrap;
-    }
+//     td:before {
+//             /* Now like a table header */
+//         position: absolute;
+//             /* Top/left values mimic padding */
+//         top: 0;
+//         left: 6px;
+//         width: 45%;
+//         padding-right: 10px;
+//         white-space: nowrap;
+//     }
 
-/*  Label the data
-    You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
-        */
-        td:nth-of-type(1):before { content: "Nome"; }
-        td:nth-of-type(2):before { content: "Telefono"; }
-        td:nth-of-type(3):before { content: "Email"; }
-        td:nth-of-type(4):before { content: "Orario"; }
-        td:nth-of-type(5):before { content: "Numero persone"; }
-        td:nth-of-type(6):before { content: "Tavolo"; }
-        td:nth-of-type(7):before { content: "Seggioloni"; }
-        td:nth-of-type(8):before { content: "Cani"; }
-        td:nth-of-type(9):before { content: "Note"; }
-    }
-}
+// /*  Label the data
+//     You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
+//         */
+//         td:nth-of-type(1):before { content: "Nome"; }
+//         td:nth-of-type(2):before { content: "Telefono"; }
+//         td:nth-of-type(3):before { content: "Email"; }
+//         td:nth-of-type(4):before { content: "Orario"; }
+//         td:nth-of-type(5):before { content: "Numero persone"; }
+//         td:nth-of-type(6):before { content: "Tavolo"; }
+//         td:nth-of-type(7):before { content: "Seggioloni"; }
+//         td:nth-of-type(8):before { content: "Cani"; }
+//         td:nth-of-type(9):before { content: "Note"; }
+//     }
+// }
 
 //stop zoom viewport on form selection small screen only
 @media #{$small-only} {
@@ -900,10 +900,16 @@ prenota
     };
 }
 
+input:not([type])[disabled], input:not([type])[readonly], fieldset[disabled] input:not([type]), input[type=text][disabled], input[type=text][readonly], fieldset[disabled] input[type=text], input[type=password][disabled], input[type=password][readonly], fieldset[disabled] input[type=password], input[type=date][disabled], input[type=date][readonly], fieldset[disabled] input[type=date], input[type=datetime][disabled], input[type=datetime][readonly], fieldset[disabled] input[type=datetime], input[type=datetime-local][disabled], input[type=datetime-local][readonly], fieldset[disabled] input[type=datetime-local], input[type=month][disabled], input[type=month][readonly], fieldset[disabled] input[type=month], input[type=week][disabled], input[type=week][readonly], fieldset[disabled] input[type=week], input[type=email][disabled], input[type=email][readonly], fieldset[disabled] input[type=email], input[type=number][disabled], input[type=number][readonly], fieldset[disabled] input[type=number], input[type=search][disabled], input[type=search][readonly], fieldset[disabled] input[type=search], input[type=tel][disabled], input[type=tel][readonly], fieldset[disabled] input[type=tel], input[type=time][disabled], input[type=time][readonly], fieldset[disabled] input[type=time], input[type=url][disabled], input[type=url][readonly], fieldset[disabled] input[type=url], input[type=color][disabled], input[type=color][readonly], fieldset[disabled] input[type=color], textarea[disabled], textarea[readonly], fieldset[disabled] textarea {
+  background-color: #fff;
+  cursor: default;
+}
+
 .error1 {
   display: none!important;
 }
 
+//Loader
 #loading {
   display: none;
   position: fixed;
@@ -918,11 +924,6 @@ prenota
   background-position: center;
   text-align: center;
   font-size: 24px;
-}
-
-input:not([type])[disabled], input:not([type])[readonly], fieldset[disabled] input:not([type]), input[type=text][disabled], input[type=text][readonly], fieldset[disabled] input[type=text], input[type=password][disabled], input[type=password][readonly], fieldset[disabled] input[type=password], input[type=date][disabled], input[type=date][readonly], fieldset[disabled] input[type=date], input[type=datetime][disabled], input[type=datetime][readonly], fieldset[disabled] input[type=datetime], input[type=datetime-local][disabled], input[type=datetime-local][readonly], fieldset[disabled] input[type=datetime-local], input[type=month][disabled], input[type=month][readonly], fieldset[disabled] input[type=month], input[type=week][disabled], input[type=week][readonly], fieldset[disabled] input[type=week], input[type=email][disabled], input[type=email][readonly], fieldset[disabled] input[type=email], input[type=number][disabled], input[type=number][readonly], fieldset[disabled] input[type=number], input[type=search][disabled], input[type=search][readonly], fieldset[disabled] input[type=search], input[type=tel][disabled], input[type=tel][readonly], fieldset[disabled] input[type=tel], input[type=time][disabled], input[type=time][readonly], fieldset[disabled] input[type=time], input[type=url][disabled], input[type=url][readonly], fieldset[disabled] input[type=url], input[type=color][disabled], input[type=color][readonly], fieldset[disabled] input[type=color], textarea[disabled], textarea[readonly], fieldset[disabled] textarea {
-  background-color: #fff;
-  cursor: default;
 }
 
 
