--- a/scss/app.scss
+++ b/scss/app.scss
@@ -17,7 +17,7 @@
 @import "foundation/components/buttons";
 @import "foundation/components/clearing";
 // @import "foundation/components/dropdown";
-@import "foundation/components/dropdown-buttons";
+//@import "foundation/components/dropdown-buttons";
 @import "foundation/components/flex-video";
 @import "foundation/components/forms";
 // @import "foundation/components/icon-bar";
@@ -32,7 +32,7 @@
 // @import "foundation/components/pricing-tables";
 // @import "foundation/components/progress-bars";
 // @import "foundation/components/range-slider";
-@import "foundation/components/reveal";
+//@import "foundation/components/reveal";
 @import "foundation/components/side-nav";
 // @import "foundation/components/split-buttons";
 @import "foundation/components/sub-nav";
@@ -40,7 +40,7 @@
 @import "foundation/components/tables";
 @import "foundation/components/tabs";
 @import "foundation/components/thumbs";
-@import "foundation/components/tooltips";
+//@import "foundation/components/tooltips";
 @import "foundation/components/top-bar";
 @import "foundation/components/type";
 // @import "foundation/components/offcanvas";
