remove not used css

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -21,7 +21,7 @@
 @import "foundation/components/flex-video";
 @import "foundation/components/forms";
 // @import "foundation/components/icon-bar";
-@import "foundation/components/inline-lists";
+//@import "foundation/components/inline-lists";
 // @import "foundation/components/joyride";
 // @import "foundation/components/keystrokes";
 @import "foundation/components/labels";
@@ -33,9 +33,9 @@
 // @import "foundation/components/progress-bars";
 // @import "foundation/components/range-slider";
 //@import "foundation/components/reveal";
-@import "foundation/components/side-nav";
+//@import "foundation/components/side-nav";
 // @import "foundation/components/split-buttons";
-@import "foundation/components/sub-nav";
+//@import "foundation/components/sub-nav";
 // @import "foundation/components/switches";
 @import "foundation/components/tables";
 @import "foundation/components/tabs";
