--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -641,166 +641,166 @@ card - commenti
 calendario - commenti
 ===================================================================*/
 
-#calendar {
-    width: 100%;
-}
+// #calendar {
+//     width: 100%;
+// }
 
-#calendar a {
-    color: $navbar-color;
-    text-decoration: none;
-}
+// #calendar a {
+//     color: $navbar-color;
+//     text-decoration: none;
+// }
 
-#calendar ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-}
+// #calendar ul {
+//     list-style: none;
+//     padding: 0;
+//     margin: 0;
+//     width: 100%;
+// }
 
-#calendar li {
-    display: block;
-    float: left;
-    width:14.342%;
-    padding: 5px;
-    box-sizing:border-box;
-    border: 1px solid #ccc;
-    margin-right: -1px;
-    margin-bottom: -1px;
-}
+// #calendar li {
+//     display: block;
+//     float: left;
+//     width:14.342%;
+//     padding: 5px;
+//     box-sizing:border-box;
+//     border: 1px solid #ccc;
+//     margin-right: -1px;
+//     margin-bottom: -1px;
+// }
 
-#calendar ul.weekdays {
-    height: 40px;
-    background: $navbar-color;
-}
+// #calendar ul.weekdays {
+//     height: 40px;
+//     background: $navbar-color;
+// }
 
-#calendar ul.weekdays li {
-    text-align: center;
-    text-transform: uppercase;
-    line-height: 20px;
-    border: none !important;
-    padding: 10px 6px;
-    color: #fff;
-    font-size: 13px;
-}
+// #calendar ul.weekdays li {
+//     text-align: center;
+//     text-transform: uppercase;
+//     line-height: 20px;
+//     border: none !important;
+//     padding: 10px 6px;
+//     color: #fff;
+//     font-size: 13px;
+// }
 
-#calendar .days li {
-    height: 130px;
-}
+// #calendar .days li {
+//     height: 130px;
+// }
 
 
-#calendar .date {
-    text-align: center;
-    margin-bottom: 5px;
-    padding: 4px;
-    background: $navbar-color;
-    color: #fff;
-    width: 2rem;
-    border-radius: 50%;
-    float: right;
-}
+// #calendar .date {
+//     text-align: center;
+//     margin-bottom: 5px;
+//     padding: 4px;
+//     background: $navbar-color;
+//     color: #fff;
+//     width: 2rem;
+//     border-radius: 50%;
+//     float: right;
+// }
 
-#calendar .event {
-    clear: both;
-    display: block;
-    font-size: 0.8rem;
-    border-radius: 4px;
-    padding: 5px;
-    margin-top: 60px;
-    margin-bottom: 0px;
-    line-height: 1,6rem;
-    background: #e4f2f2;
-    border: none;
-    color: #009aaf;
-    text-decoration: none;
-}
-#calendar .event-close {
-    clear: both;
-    display: block;
-    font-size: 0.8rem;
-    border-radius: 4px;
-    padding: 5px;
-    margin-top: 60px;
-    margin-bottom: 0px;
-    line-height: 1,6rem;
-    background: #DC143C;
-    border: none;
-    color: #DC143C;
-    text-decoration: none;
-}
+// #calendar .event {
+//     clear: both;
+//     display: block;
+//     font-size: 0.8rem;
+//     border-radius: 4px;
+//     padding: 5px;
+//     margin-top: 60px;
+//     margin-bottom: 0px;
+//     line-height: 1,6rem;
+//     background: #e4f2f2;
+//     border: none;
+//     color: #009aaf;
+//     text-decoration: none;
+// }
+// #calendar .event-close {
+//     clear: both;
+//     display: block;
+//     font-size: 0.8rem;
+//     border-radius: 4px;
+//     padding: 5px;
+//     margin-top: 60px;
+//     margin-bottom: 0px;
+//     line-height: 1,6rem;
+//     background: #DC143C;
+//     border: none;
+//     color: #DC143C;
+//     text-decoration: none;
+// }
 
-#calendar .event-desc :hover {
-    background: scale-color(#e4f2f2, $lightness: -15%);
-}
+// #calendar .event-desc :hover {
+//     background: scale-color(#e4f2f2, $lightness: -15%);
+// }
 
-#calendar .event-desc {
-    color: #666;
-    margin: 3px 0 7px 0;
-    text-decoration: none;
-}
+// #calendar .event-desc {
+//     color: #666;
+//     margin: 3px 0 7px 0;
+//     text-decoration: none;
+// }
 
-#calendar .event-close>.event-desc {
-    color: $white;
-    margin: 3px 0 7px 0;
-    text-decoration: none;
-}
+// #calendar .event-close>.event-desc {
+//     color: $white;
+//     margin: 3px 0 7px 0;
+//     text-decoration: none;
+// }
 
 /* ============================
                 Mobile Responsiveness
    ============================*/
 
 
-@media #{$small-only} {
+// @media #{$small-only} {
 
-    #calendar .weekdays, #calendar .other-month {
-        display: none;
-    }
+//     #calendar .weekdays, #calendar .other-month {
+//         display: none;
+//     }
 
-    #calendar li {
-        height: auto !important;
-        border: 1px solid #ededed;
-        width: 100%;
-        padding: 10px;
-        margin-bottom: -1px;
-    }
+//     #calendar li {
+//         height: auto !important;
+//         border: 1px solid #ededed;
+//         width: 100%;
+//         padding: 10px;
+//         margin-bottom: -1px;
+//     }
 
-    #calendar .date {
-        float: none;
-    }
-    #calendar .event {
-    clear: both;
-    display: block;
-    font-size: 0.8rem;
-    border-radius: 4px;
-    padding: 5px;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    line-height: 1,6rem;
-    background: #e4f2f2;
-    border: none;
-    color: #009aaf;
-    text-decoration: none;
-}
-    #calendar .event-close {
-        clear: both;
-        display: block;
-        font-size: 0.8rem;
-        border-radius: 4px;
-        padding: 5px;
-        margin-top: 20px;
-        margin-bottom: 0px;
-        line-height: 1,6rem;
-    }
-}
+//     #calendar .date {
+//         float: none;
+//     }
+//     #calendar .event {
+//     clear: both;
+//     display: block;
+//     font-size: 0.8rem;
+//     border-radius: 4px;
+//     padding: 5px;
+//     margin-top: 20px;
+//     margin-bottom: 0px;
+//     line-height: 1,6rem;
+//     background: #e4f2f2;
+//     border: none;
+//     color: #009aaf;
+//     text-decoration: none;
+// }
+//     #calendar .event-close {
+//         clear: both;
+//         display: block;
+//         font-size: 0.8rem;
+//         border-radius: 4px;
+//         padding: 5px;
+//         margin-top: 20px;
+//         margin-bottom: 0px;
+//         line-height: 1,6rem;
+//     }
+// }
 
-/*===================================================================
-tabs
-===================================================================*/
+// /*===================================================================
+// tabs
+// ===================================================================*/
 
-.tab-title {
-    border-right-style: solid;
-    border-width: 1px;
-    border-color: $white;
-}
+// .tab-title {
+//     border-right-style: solid;
+//     border-width: 1px;
+//     border-color: $white;
+// }
 
 /*===================================================================
 privacy
