--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -926,7 +926,9 @@ input:not([type])[disabled], input:not([type])[readonly], fieldset[disabled] inp
   font-size: 24px;
 }
 
-
+/*===================================================================
+tabs menu
+===================================================================*/
 
 // ul.tabs {
 //     text-align: center;
