--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -970,7 +970,8 @@ accordion space between container
 
 .icon {
     width:0.75rem;
-    font-size: 1.125rem;
+    line-height: 1.4rem;
+    font-size: 2rem;
     font-weight:bold;
     color: $primary-color;
 }
