--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -972,7 +972,7 @@ accordion space between container
     width:1rem;
     line-height: 1.4rem;
     font-size: 2rem;
-    font-weight:bold;
+    font-weight:600;
     color: $primary-color;
 }
 
