--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -949,6 +949,9 @@ accordion space between container
   //   margin-bottom: 2px !important; }
 
 
+/*===================================================================
+accordion domande frequenti
+===================================================================*/
 
 .menu {
 
@@ -971,7 +974,7 @@ accordion space between container
     width:1rem;
     line-height: 1.4rem;
     font-size: 2rem;
-    font-weight:600;
+    font-weight:500;
     color: $primary-color;
 }
 
