--- a/scss/app.css
+++ b/scss/app.css
@@ -3994,6 +3994,27 @@ label.error {
   color: #f04124;
 }
 
+.inline-list {
+  list-style: none;
+  margin-top: 0;
+  margin-bottom: 1.0625rem;
+  margin-left: -1.375rem;
+  margin-right: 0;
+  overflow: hidden;
+  padding: 0;
+}
+
+.inline-list > li {
+  display: block;
+  float: left;
+  list-style: none;
+  margin-left: 1.375rem;
+}
+
+.inline-list > li > * {
+  display: block;
+}
+
 .label {
   display: inline-block;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
