--- a/scss/app.scss
+++ b/scss/app.scss
@@ -21,7 +21,7 @@
 @import "foundation/components/flex-video";
 @import "foundation/components/forms";
 // @import "foundation/components/icon-bar";
-//@import "foundation/components/inline-lists";
+@import "foundation/components/inline-lists";
 // @import "foundation/components/joyride";
 // @import "foundation/components/keystrokes";
 @import "foundation/components/labels";
