--- a/scss/app.css
+++ b/scss/app.css
@@ -7118,7 +7118,7 @@ accordion space between container
 accordion domande frequenti
 ===================================================================*/
 .menu {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.8rem;
 }
 
 .header {
@@ -7144,154 +7144,128 @@ accordion domande frequenti
   display: none;
 }
 
+/*===================================================================
+hamburger menu
+===================================================================*/
 /* Basic styling */
-#testhamburgermenu {
-  /* Mobile menu */
-  /* Tablet menu */
-  /* Desktop menu */
+nav {
+  background: #ffffff;
+  border-bottom: 2.5px #666666 solid;
+  padding: 0 5px 0 0px;
 }
 
-#testhamburgermenu nav {
-  background: #222;
-  padding: 0 15px;
-}
-
-#testhamburgermenu a {
-  color: white;
+#hamburger a {
+  color: #222222;
   text-decoration: none;
 }
 
-#testhamburgermenu .menu,
-#testhamburgermenu .submenu {
+.menu1 {
   list-style-type: none;
+  margin: 0 15px;
+  padding: 0.5rem 0rem 0.5rem 0rem;
 }
 
-#testhamburgermenu .logo {
-  font-size: 20px;
-  padding: 7.5px 10px 7.5px 0;
+.logo {
+  font-size: 1,125rem;
+  padding: 7.5px 20px 7.5px 0;
 }
 
-#testhamburgermenu .item {
-  padding: 10px;
+.item {
+  padding: 5px 10px 15px 20px;
 }
 
-#testhamburgermenu .item.button {
-  padding: 9px 5px;
+#hamburger .item:not(.button) a:hover,
+.item a:hover::after {
+  color: #e00c10;
 }
 
-#testhamburgermenu .menu {
+.toggle {
+  flex: 1;
+  text-align: right;
+}
+
+/* Mobile menu */
+.menu1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
 
-#testhamburgermenu .menu li a {
+.menu1 li a {
   display: block;
-  padding: 15px 5px;
+  padding: 5px 5px;
 }
 
-#testhamburgermenu .menu li.subitem a {
-  padding: 15px;
-}
-
-#testhamburgermenu .toggle {
+.toggle {
   order: 1;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
-#testhamburgermenu .item.button {
+.item.button {
   order: 2;
+  margin-top: 16px;
+  margin-bottom: 12px;
 }
 
-#testhamburgermenu .item {
+.item {
   order: 3;
   width: 100%;
+  padding: 10px 0px;
   text-align: left;
   display: none;
+  padding-left: 10px;
 }
 
-#testhamburgermenu .active .item {
+.active .item {
   display: block;
 }
 
-#testhamburgermenu .button.secondary {
-  /* divider between buttons and menu links */
-  border-bottom: 1px #444 solid;
+#hamburger .button a {
+  order: 2;
+  display: block;
+  color: #FFFFFF;
+  font-size: 1.25rem;
 }
 
-@media all and (min-width: 700px) {
-  #testhamburgermenu {
-    /* Button up from tablet screen */
-  }
-  #testhamburgermenu .menu {
-    justify-content: center;
-  }
-  #testhamburgermenu .logo {
-    flex: 1;
-  }
-  #testhamburgermenu .item.button {
-    width: auto;
-    order: 1;
-    display: block;
-  }
-  #testhamburgermenu .toggle {
-    flex: 1;
-    text-align: right;
-    order: 2;
-  }
-  #testhamburgermenu .menu li.button a {
-    padding: 10px 15px;
-    margin: 5px 0;
-  }
-  #testhamburgermenu .button a {
-    background: #fff;
-  }
-  #testhamburgermenu .button.secondary {
-    border: 0;
-  }
-  #testhamburgermenu .button.secondary a {
-    background: transparent;
-    border: 1px #0080ff solid;
-  }
-  #testhamburgermenu .button a:hover {
-    text-decoration: none;
-  }
-  #testhamburgermenu .button:not(.secondary) a:hover {
-    background: royalblue;
-    border-color: darkblue;
-  }
-}
-
-@media all and (min-width: 960px) {
-  #testhamburgermenu .menu {
+/* Tablet menu */
+/* Desktop menu */
+@media all and (min-width: 60em) {
+  .menu1 {
     align-items: flex-start;
+    justify-content: center;
     flex-wrap: nowrap;
     background: none;
   }
-  #testhamburgermenu .logo {
+  .logo {
     order: 0;
+    flex: 1;
   }
-  #testhamburgermenu .item {
+  .item {
     order: 1;
     position: relative;
     display: block;
     width: auto;
+    padding: 20px 20px;
   }
-  #testhamburgermenu .button {
+  #hamburger .item.button {
+    width: auto;
+    order: 1;
+    display: block;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  #hamburger .button a {
+    order: 2;
+    display: block;
+    color: #FFFFFF;
+    margin-top: 1px;
+    font-size: 1.25rem;
+  }
+  #hamburger .button {
     order: 2;
   }
-  #testhamburgermenu .submenu-active .submenu {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 68px;
-    background: #111;
-  }
-  #testhamburgermenu .toggle {
+  .toggle {
     display: none;
-  }
-  #testhamburgermenu .submenu-active {
-    border-radius: 0;
   }
 }
