--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1000,8 +1000,8 @@ hamburger menu
 }
 .menu1 {
   list-style-type: none;
-
   margin:0 15px;
+  margin-right: 0px;
   padding:0.5rem 0rem 0.5rem 0rem;
 }
 .logo {
@@ -1089,6 +1089,7 @@ hamburger menu
     justify-content: center;
     flex-wrap: nowrap;
     background: none;
+    margin:0 15px;
   }
   .logo {
     order: 0;
