--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -992,7 +992,6 @@ hamburger menu
   background: #ffffff;
   border-bottom: 2.5px #666666 solid;
   padding: 0 5px 0 0px;
-  // margin-bottom: 1rem;
 }
 #hamburger a {
   color: $jet;
@@ -1000,8 +999,7 @@ hamburger menu
 }
 .menu1 {
   list-style-type: none;
-  margin:0 15px;
-  margin-right: 0px;
+  margin:0px 0px 0px 15px;
   padding:0.5rem 0rem 0.5rem 0rem;
 }
 .logo {
@@ -1041,7 +1039,8 @@ hamburger menu
 .item.button {
   order: 2;
   margin-top: 16px;
-  margin-bottom:12px;
+  margin-bottom: 12px;
+  margin-right: 10px;
 }
 .item {
   order: 3;
@@ -1126,5 +1125,4 @@ hamburger menu
         color: $primary-color;
     }
 }
-
 
